[gd_scene load_steps=4 format=3 uid="uid://31b7glqtkaue"]

[ext_resource type="Texture2D" uid="uid://dfw6g01fhlwte" path="res://assets/ui/按钮.png" id="1_e4w50"]
[ext_resource type="Script" path="res://UI/game_button.gd" id="1_l2xc5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dip7x"]
texture = ExtResource("1_e4w50")
texture_margin_left = 16.0
texture_margin_top = 18.0
texture_margin_right = 16.0
texture_margin_bottom = 18.0

[node name="GameButton" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_dip7x")
script = ExtResource("1_l2xc5")
